# claude-pocket-console

./: .env.example  .eslintignore  .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_REFERENCE.md  CONTINUE copy.md  CONTINUE-14-multi-agent.md  CONTINUE.md  LICENSE  README-chatgpt.md  README-gemini.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: .env.example  README.md  settings.json  settings.local.json.example
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup-ssh.sh
.github/: CONTRIBUTING-gemini.md  CONTRIBUTING.md  contributing.md
.husky/: pre-commit
.world/: ports.yml
ai_docs/: colors.md  future-ideas.md  workflow.md
apps/terminal-server/: .gitignore  Dockerfile  Dockerfile.dev  README-claude.md  pyproject.toml  requirements.txt
apps/terminal-server/src/: __init__.py  docker_manager.py  main.py  models.py  security.py  websocket.py
apps/terminal-server/tests/: __init__.py
archive/: PROMPT.md
blog/: BLOG_POST.md
changelogs/: README.md
claudia-analysis/: README.md
docs/: AGENT_ORCHESTRATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INFRASTRUCTURE.md  MULTI_AGENT_SETUP.md  architecture.md  dockerization-plan.md
scripts/: README.md  check-deps.sh  clean.sh  dev.sh  extract-release-section.sh
tests/: app.spec.ts  debug-files.spec.ts  debug-terminal-close.spec.ts  debug-terminal.spec.ts  paste-sheet-repro.spec.ts  search-sheet-e2e.spec.ts
(+361 files in other folders)
